--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.0",
     "concurrently": "^5.3.0",
     "config": "^3.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
